--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 /* main color palette */
+$lighter-blue: #68c6ee;
 $light-blue: #29abe2;
 $blue: #2a3647;
 $steel-blue: #2a3d59;
@@ -24,7 +25,9 @@ $error-muted: #ff001f;
 /* element-colors */
 $label-blue: #0038ff;
 $label-teal: #1fd7c1;
+$light-email-blue: #70b6f7;
 $email-blue: #007cee;
+$dark-email-blue: #025fb6;
 $progress-bar-blue: #4589ff;
 $progress-bar-grey: #f4f4f4;
 $input-blue: #005dff;
